--- a/CSS/chat.css
+++ b/CSS/chat.css
@@ -61,6 +61,7 @@
     border-radius: 5px;
     max-width: 40%;
     width: max-content;
+    word-break: break-all;
   }
   .chat-container .message-container.their .content{
     background: #dadbdb;
@@ -91,4 +92,16 @@
   }
   .chat-container .list-conversations .conversation.current{
     background-color: #dbdbdb;
+  }
+  .chat-container .aside-right{
+    padding: 10px;
+    border-left: 1px solid #dbdbdb;
+    width: 15%;
+  }
+  .chat-container .aside-right .user{
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .chat-container #add-user-form{
+    margin-top: 12px;
   }
